--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,6 @@ scikit-learn = "^1.7.0"
 jupyter = "^1.1.1"
 scikit-optimize = "^0.10.2"
 xgboost = "^3.0.2"
+lightgbm = "^4.6.0"
+catboost = "^1.2.8"
 
