--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ pandas = "^2.3.0"
 scikit-learn = "^1.7.0"
 jupyter = "^1.1.1"
 scikit-optimize = "^0.10.2"
-xgboost = "^3.0.2"
-lightgbm = "^4.6.0"
-catboost = "^1.2.8"
+numpy = "^2.3.0"
+matplotlib = "^3.10.3"
+japanize-matplotlib = "^1.1.3"
 
