--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,10 @@ python = ">=3.12, <3.13"
 
 [tool.poetry.group.dev.dependencies]
 pandas = "^2.3.0"
-scikit-learn = "^1.7.0"
 jupyter = "^1.1.1"
 scikit-optimize = "^0.10.2"
 numpy = "^2.3.0"
 matplotlib = "^3.10.3"
 japanize-matplotlib = "^1.1.3"
+imbalanced-learn = "^0.13.0"
 
